--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             <div class="scoreboard-letter" id="letter-number29"></div>
             <div class="scoreboard-letter" id="letter-number30"></div>
         </div>
-        <button id="buttonA">a</button>
+        <button id="backspace">backspace</button>
+        <button id="enter">enter</button>
+        <div id="keyboard-buttons">
+            
+        </div>
     </div>
     
     <script src="script.js"></script>
